<resources>
    <string name="app_name">Pluralism</string>
    <string name="splash_fragment">Hello!</string>
    <string name="wallet">Wallet</string>
    <string name="news">News</string>
    <string name="browser">Browser</string>
    <string name="exchange">Exchange</string>
    <string name="settings">Settings</string>
    <string name="recommended">Recommended</string>
    <string name="loading_problem">There was a problem when loading</string>
    <string name="browser_history">History</string>
    <string name="enter_url">Enter Url</string>
    <string name="close">Close</string>
    <string name="bitcoin">Bitcoin|1</string>
    <string name="favorites">Favorites</string>
    <string name="crypto_currency_type">Crypto currency type</string>
    <string name="add_account">Add account</string>
    <string name="distribution">Distribution</string>
    <string name="total_value">Total value</string>
    <string name="address_book">Address book</string>
    <string name="buy_crypto">Buy crypto</string>
    <string name="light_mode">Light mode</string>
    <string name="trending">Trending</string>
    <string name="nyt_us">NewYorkTimes US</string>
    <string name="euronews">Euronews</string>
    <string name="rt_russia">RT Russia</string>
    <string name="sections">Sections</string>
    <string name="world_news">World News</string>
    <string name="business">Business</string>
    <string name="russia_europe_usa">Russia/Europe/USA</string>
    <string name="sport">Sport</string>
    <string name="op_ed">Op-ed</string>
    <string name="games">Games</string>
    <string name="section">Section</string>
    <string name="search">Search</string>

    <string-array name="section_names">
        <item>@string/world_news</item>
        <item>@string/russia_europe_usa</item>
        <item>@string/sport</item>
        <item>@string/business</item>
        <item>@string/op_ed</item>
        <item>@string/games</item>
    </string-array>
</resources>