<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_accounts"
        android:enabled="true"
        android:icon="@drawable/ic_accounts"
        android:title="@string/accounts"/>
    <item
        android:id="@+id/menu_browser"
        android:enabled="true"
        android:icon="@drawable/ic_browser"
        android:title="@string/browser"/>
    <item
        android:id="@+id/menu_wallet"
        android:enabled="true"
        android:icon="@drawable/ic_wallet"
        android:title="@string/wallet"/>
    <item
        android:id="@+id/menu_exchange"
        android:enabled="true"
        android:icon="@drawable/ic_exchange"
        android:title="@string/exchange"/>
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_menu_round"
        android:title="@string/settings"/>
</menu>