<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exchange_nav"
    app:startDestination="@id/sections_fragment">

    <fragment
        android:id="@+id/sections_fragment"
        android:name="ru.slatinin.nytnews.ui.fragments.SectionsFragment"
        android:label="@string/sections"
        tools:layout="@layout/fragment_sections">
        <action
            android:id="@+id/sections_to_section"
            app:destination="@id/section_fragment" >
            <argument
                android:name="sectionName"
                app:argType="string" />

        </action>
    </fragment>

    <fragment
        android:id="@+id/section_fragment"
        android:name="ru.slatinin.nytnews.ui.fragments.SectionFragment"
        android:label="@string/section"
        tools:layout="@layout/fragment_section">
        <argument
            android:name="sectionName"
            app:argType="string" />
        <action
            android:id="@+id/section_to_browser"
            app:destination="@id/browser_fragment"
            app:enterAnim="@anim/slide_in_bottom"
            app:exitAnim="@anim/slide_out_bottom"
            app:popEnterAnim="@anim/slide_in_bottom"
            app:popExitAnim="@anim/slide_out_bottom">
            <argument
                android:name="url"
                android:defaultValue="@null"
                app:argType="string"
                app:nullable="true" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/browser_fragment"
        android:name="ru.slatinin.nytnews.ui.fragments.BrowserFragment"
        android:label="@string/browser"
        tools:layout="@layout/fragment_browser">
        <argument
            android:name="url"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>

</navigation>