<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/popular_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="?attr/actionBarSize"
                tools:context=".ui.fragments.TrendingFragment">

                <TextView
                    android:id="@+id/popular_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12"
                    android:layout_marginTop="@dimen/margin_12"
                    android:text="@string/trending"
                    android:textAllCaps="true"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toStartOf="@id/popular_progress"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/popular_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_12"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/popular_title"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/popular_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12"
                    android:text="@string/loading_problem"
                    android:textAllCaps="true"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/popular_progress"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/popular_by_views"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_12"
                    android:layout_marginTop="8dp"
                    android:text="@string/nyt_us"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/popular_error"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/nyt_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_12"
                    android:clipToPadding="false"
                    app:layout_constraintTop_toBottomOf="@id/popular_by_views" />

                <TextView
                    android:id="@+id/popular_by_emails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12"
                    android:layout_marginTop="@dimen/margin_24"
                    android:text="@string/euronews"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/nyt_list"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/euronews_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_12"
                    android:clipToPadding="false"
                    app:layout_constraintTop_toBottomOf="@id/popular_by_emails" />

                <TextView
                    android:id="@+id/popular_by_shares"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_12"
                    android:layout_marginTop="@dimen/margin_24"
                    android:text="@string/rt_russia"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/euronews_list"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rt_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_12"
                    android:layout_marginBottom="?attr/actionBarSize"
                    android:clipToPadding="false"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_constraintTop_toBottomOf="@id/popular_by_shares" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>