<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_wallet_top_bar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            tools:context=".ui.fragments.NewsFragment">

            <TextView
                android:id="@+id/fragment_wallet_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:text="@string/news"
                android:textSize="@dimen/screen_title_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/fragment_wallet_diagram"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/fragment_wallet_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/standard_margin"
                android:contentDescription="@string/add_account"
                android:src="@drawable/ic_plus"
                app:layout_constraintBottom_toBottomOf="@id/fragment_wallet_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/fragment_wallet_title" />

            <ImageView
                android:id="@+id/fragment_wallet_diagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/standard_margin"
                android:contentDescription="@string/distribution"
                android:src="@drawable/ic_diagram"
                app:layout_constraintBottom_toBottomOf="@id/fragment_wallet_title"
                app:layout_constraintEnd_toStartOf="@id/fragment_wallet_plus"
                app:layout_constraintTop_toTopOf="@id/fragment_wallet_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/fragment_wallet_top_bar_container">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/fragment_wallet_account_info_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/fragment_wallet_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/standard_margin"
                        android:text="@string/total_value"
                        android:textSize="@dimen/small_text_size"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_wallet_crypto_currency_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/fragment_wallet_account_info_container" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>