<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_browser_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/fragment_browser_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_margin"
            android:text="@string/browser"
            android:textSize="@dimen/screen_title_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/fragment_browser_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="@dimen/standard_margin"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_close_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ru.slatinin.nytnews.component.NYTEditText
            android:id="@+id/fragment_browser_edit_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_url"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/stroke_color"
            app:layout_constraintBottom_toTopOf="@id/fragment_browser_guide_30h" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_browser_guide_30h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <WebView
            android:id="@+id/fragment_browser_web_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:background="@color/backgroundColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_browser_guide_30h"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fragment_browser_guide_50v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fragment_browser_history_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:elevation="4dp"
            android:onClick="@{clickListener}"
            app:cardBackgroundColor="@color/backgroundColor"
            app:cardCornerRadius="@dimen/standard_margin"
            app:contentPadding="@dimen/standard_margin"
            app:layout_constraintEnd_toStartOf="@+id/fragment_browser_guide_50v"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_browser_guide_30h"
            app:strokeColor="#252547"
            app:strokeWidth="@dimen/stroke_width">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/fragment_browser_image_history"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/browser_history"
                    android:src="@drawable/ic_browser_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_standard_margin"
                    android:text="@string/browser_history"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/fragment_browser_favorites_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:elevation="4dp"
            android:onClick="@{clickListener}"
            app:cardBackgroundColor="@color/backgroundColor"
            app:cardCornerRadius="@dimen/standard_margin"
            app:contentPadding="@dimen/standard_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/fragment_browser_guide_50v"
            app:layout_constraintTop_toBottomOf="@id/fragment_browser_guide_30h"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="@dimen/stroke_width">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/fragment_browser_image_favorites"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/browser_history"
                    android:src="@drawable/ic_star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_standard_margin"
                    android:text="@string/favorites"
                    android:textStyle="bold" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>